--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "react-typescript",
   "version": "1.0.0",
   "description": "React and TypeScript example starter project",
-  "keywords": ["typescript", "react", "starter"],
+  "keywords": [
+    "typescript",
+    "react",
+    "starter"
+  ],
   "main": "src/index.tsx",
   "dependencies": {
     "loader-utils": "3.2.1",
@@ -13,7 +17,9 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "5.0.2",
     "chart.js": "4.5.0",
-    "react-chartjs-2": "5.3.0"
+    "react-chartjs-2": "5.3.0",
+    "react-signature-canvas": "1.1.0-alpha.2",
+    "prop-types": "15.8.1"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
@@ -27,5 +33,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
