--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
-    "include": ["./src/**/*"],
     "compilerOptions": {
-      "strict": true,
+      "target": "ES2017",
+      "lib": ["ES2017", "DOM", "DOM.Iterable"],
+      "module": "ESNext",
+      "moduleResolution": "node",
+      "allowJs": true,
+      "skipLibCheck": true,
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "lib": ["dom", "es2015", "esnext"],
-      "jsx": "react-jsx",
-      "skipLibCheck": true,
-      "resolveJsonModule": true,
-      "noEmit": true,
-      "target": "es5",
+      "strict": true,
       "forceConsistentCasingInFileNames": true,
-      "isolatedModules": true
-    }
+      "jsx": "react-jsx",
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "noEmit": true
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
   }
