--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "main": "src/index.tsx",
   "dependencies": {
     "loader-utils": "3.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
     "react-scripts": "5.0.1",
     "xlsx": "0.18.5",
     "jspdf": "3.0.1",
@@ -19,7 +18,8 @@
     "react-signature-canvas": "1.1.0-alpha.2",
     "prop-types": "15.8.1",
     "chart.js": "4.5.0",
-    "react-chartjs-2": "5.3.0"
+    "react-chartjs-2": "5.3.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
