--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prop-types": "15.8.1",
     "chart.js": "4.5.0",
     "react-chartjs-2": "5.3.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "axios": "1.12.2"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
